# Einstein_Summation

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  benchmark.cpp  einsum.cpp  einsum.hpp  helper.hpp  input_handler.hpp  labels.hpp  main.cpp  matrices.hpp  matrixholder.hpp  tests.cpp  traits.hpp
.github/workflows/: action.yml
benchmark/: benchmark.cpp
include/: array_t.hpp  einsum.hpp  fixed_string.hpp  helper.hpp  helpers.hpp  input_handler.hpp  labels.hpp  matrices.hpp  matrixholder.hpp  printers.hpp  traits.hpp  typelist.hpp
src/: array_t.cpp  einsum.cpp  labels.cpp  main.cpp
tests/: tests.cpp
